@@ -25,6 +25,8 @@
  * @bug 5042453
  * @summary Ipv6 address throws Non-numeric port number error
  * @modules java.corba/com.sun.jndi.cosnaming
+ * @compile --add-modules=java.corba IiopUrlIPv6.java
+ * @run main/othervm --add-modules=java.corba IiopUrlIPv6
  */
 
 import com.sun.jndi.cosnaming.*;
