@@ -28,8 +28,8 @@
  * @author mkos
  * @library javax.mail.jar
  * @modules java.xml.ws
- * @compile -addmods java.xml.ws MailTest.java
- * @run main/othervm -addmods java.xml.ws MailTest
+ * @compile --add-modules=java.xml.ws MailTest.java
+ * @run main/othervm --add-modules=java.xml.ws MailTest
  */
 
 import javax.activation.CommandMap;
